<resources>
    <string name="app_name">DaneCreteil</string>
    <string name="message_version">Version:2017.11</string>
    <string name="title_activity_animateurs">Liste des Animateurs</string>
    <string name="title_activity_etablissements">Liste des Etablissements</string>
    <string name="search_hint">Rechercher un animateur</string>
    <string name="search_label_animateur">RechercherAnimateur</string>
    <string name="heading_my_animateurs">Animateurs</string>
    <string name="heading_my_etablissements">Etablissements</string>
    <string name="heading_my_personnel">Personnel</string>
    <string name="menu_logout">Quitter</string>
    <string name="menu_reinitialisation">Réinitialiser les données</string>
    <string name="title_activity_new_referent">NewReferentActivity</string>
    <string name="title_activity_etablissements_par_animateur">Etablissements Par AnimateurActivity
    </string>
    <string name="title_activity_personnel_par_etablissement">Personnel Par EtablissementActivity
    </string>
    <string name="label_recherche_discipline">Discipline</string>
    <string name="pref_depart_key">departement</string>
    <string name="pref_depart_label">Département</string>
    <string name="pref_depart_default">93</string>

    <string name="pref_depart_label_93">Seine Saint Denis</string>
    <string name="pref_depart_label_94">Val de Marne</string>
    <string name="pref_depart_label_77">Seine et Marne</string>

    <string name="pref_depart_77" translatable="false">77</string>
    <string name="pref_depart_93" translatable="false">93</string>
    <string name="pref_depart_94" translatable="false">94</string>
    <string name="paramètres">Paramètres</string>
    <string name="choix_departement">Département par défault</string>
    <string name="dialog_confirmation_suppression">Voulez-vous confirmer la suppression ?</string>
    <string name="Oui">Oui</string>
    <string name="Non">Non</string>
    <string name="valider">Valider</string>
    <string name="cancel">Quitter</string>
    <string name="menu_animateur">Menu Animateur</string>
    <string name="animateur_tel">Appeler l\'animateur</string>
    <string name="animateur_email">envoyer un email</string>
    <string name="referent_tel">Appeler le référent</string>
    <string name="referent_email">envoyer un email</string>
    <string name="personnel_tel">Appeler le personnel</string>
    <string name="personnel_email">envoyer un email</string>
    <string name="etablissement_tel">Appeler l\'établissement</string>
    <string name="etablissement_email">Envoyer un mail</string>
    <string name="etablissement_map">Aller à l\'établissement</string>
    <string name="menu_etablissement">Liste des Actions</string>
    <string name="menu_actions">Liste des Actions</string>
    <string name="personnel_edit">Modifier</string>
    <string name="referent_edit">Modifier</string>
    <string name="referent_delete">Supprimer</string>
    <string name="animateur_photo">Synchroniser</string>
    <string name="service_name">Synchronisation</string>

</resources>
